--- a/resources/css/filament/app/theme.css
+++ b/resources/css/filament/app/theme.css
@@ -3,7 +3,7 @@
 @config 'tailwind.config.js';
 
 .fi-panel-app {
-    @apply bg-stone-200/80 dark:!bg-slate-950;
+    @apply bg-stone-100 dark:!bg-slate-950;
 }
 
 .fi-topbar > nav {
