--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* logo Animations  */
+    #letterM {
+      animation: fade-in 2s forwards;
+    }
+
+    #orbit {
+      stroke-dasharray: 220;
+      stroke-dashoffset: 220;
+      animation: draw-orbit 2s forwards;
+    }
+
+    #arrow {
+      transform-origin: 50px 100px;
+      transform: rotate(-20deg);
+      animation: rotate-arrow 2s forwards 2s;
+    }
+
+    @keyframes fade-in {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes draw-orbit {
+      to { stroke-dashoffset: 0; }
+    }
+
+    @keyframes rotate-arrow {
+      to { transform: rotate(0deg); }
+    }
